2006-02-28  Johannes Schmid <jhs@gnome.org>

	* plugins/file-wizard/Makefile.am
	plugins/file-wizard/action-callbacks.c (removed)
	plugins/file-wizard/action-callbacks.h (removed)
	plugins/file-wizard/anjuta-file-wizard.ui
	plugins/file-wizard/plugin.c: (activate_plugin),
	(deactivate_plugin)
	plugins/file-wizard/plugin.h:
	Removed Edit->Insert Text submenu (replace by macros plugin)
	
	* plugins/sourceview/sourceview.c: (sourceview_new),
	(ieditor_set_popup_menu):
	Fixed some more bugs
	
	* plugins/subversion/svn-threat.h (removed): Removed ununsed file

2006-02-28  Naba Kumar <naba@gnome.org>

	* plugins/file-manager/an_file_view.c,
	plugins/symbol-browser/an_symbol_view.c: Show tooltips for unselected
	rows also and with delay 1 sec (the color and timout value should
	probably be picked up from some system wide preference key).

2006-02-28  Naba Kumar <naba@gnome.org>

	* libanjuta/interfaces/libanjuta.idl,
	plugins/document-manager/action-callbacks.c,
	plugins/document-manager/plugin.c,
	plugins/editor/text_editor.c: Renamed IAnjutaEditorView to
	IAnjutaEditorFolds and implemented IAnjutaEditorView as editor views.
	Added interface checks in document manager and enable/disable
	menus based on supported interface.
	
	* plugins/project-import/anjuta-project-import.glade: Set some
	resonable size for the import dialog.
 
 2006-02-27  Naba Kumar  <naba@gnome.org>

	* libanjuta/interfaces/libanjuta.idl,
	plugins/document-manager/action-callbacks.c,
	plugins/editor/text_editor.c: Fixed IAnjutaEditorLineMode interface
	and eol conversion actions.

2006-02-27  Johannes Schmid <jhs@gnome.org>
	
	* plugins/sourceview/sourceview.c: Implemented markers and fixed several crashers
	* plugins/file-manager/an_file_view.c
	plugins/file-manager/plugin.h:  Added tooltips
	* plugins/symbol-browser/an_symbol_view.h: Added tooltips

2006-02-26  Naba Kumar  <naba@gnome.org>

	* plugins/build-basic-autotools/anjuta-build-basic-autotools-plugin.glade,