@@ -1,3 +1,8 @@
+2006-03-02  Jean-Noel Guiheneuf <guiheneuf.jean-noel@wanadoo.fr>
+
+	* plugins/sourceview/sourceview.c:
+	Select to brace, select block.
+
 2006-02-28  Johannes Schmid <jhs@gnome.org>
 
 	* plugins/file-wizard/Makefile.am
